Ross fix for alignment of ol numerals

--- a/app/assets/stylesheets/components/_blocks.scss
+++ b/app/assets/stylesheets/components/_blocks.scss
@@ -631,6 +631,8 @@
     }
   }
   .list-number {
+    width: 30px;
+    text-align: center;
     color: $brand-main;
     margin-right: 1em;
     font-size: 1.875em;
